# geoparser

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml  requirements.txt  setup.py
.github/: licenses.sh  stg_release.sh
.github/workflows/: ci.yml  coverage.yml  integration.yml  licenses.yml  lint.yml  paper.yml  push.yml  push_pr.yml  spatialite-binaries.yml  spatialite.yml  spellfix.yml  test.yml  upload_previews.yml
demo/: .dockerignore  Dockerfile  README.md  demo.ipynb
docs/: api.rst  conf.py  demo.rst  index.rst  installation.rst  macos.rst  macos_compatibility.rst  quickstart.rst  usage.rst
docs/_static/: map.html
docs/api/: gazetteer.rst  geoparser.annotator.rst  geoparser.gazetteers.rst  geoparser.geodoc.rst  geoparser.geoparser.rst  geoparser.geospan.rst  geoparser.rst  geoparser.trainer.rst  models.rst  modules.rst  project.rst
docs/guides/: gazetteers.rst  modules.rst  projects.rst  training.rst  working_with_projects.rst
geoparser/: __init__.py  __main__.py  annotator.py  constants.py  database.py  downloader.py  entities.py  gazetteer.py  geodatacollator.py  geodoc.py  geonames.py  geoparser.py  geopooling.py  geospan.py  geotransformer.py  swissnames3d.py  trainer.py
geoparser/annotator/: README.md  __init__.py  __main__.py  annotator.py  app.py  constants.py  dependencies.py  exceptions.py  metadata.py  sessions_cache.py  util.py
geoparser/annotator/db/: db.py
geoparser/annotator/models/: api.py
geoparser/annotator/static/: annotate.css  annotate.js  continue_session.js
geoparser/annotator/templates/: annotate.html  continue_session.html  index.html  start_new_session.html
geoparser/app/: app.py  sessions_cache.py  util.py
geoparser/cli/: annotator.py  app.py  cli.py  download.py  install.py
geoparser/config/: __init__.py  config.py  gazetteers.yaml  models.py  utils.py
geoparser/context/: __init__.py  context.py
geoparser/db/: db.py  engine.py
geoparser/db/crud/: __init__.py  base.py  context.py  document.py  feature.py  gazetteer.py  gazetteer_column.py  gazetteer_relationship.py  gazetteer_table.py  location.py  name.py  project.py  recognition.py  recognition_module.py  recognition_object.py  recognition_process.py  recognition_subject.py  recognizer.py  reference.py  referent.py  resolution.py  resolution_module.py  resolution_object.py  resolution_process.py  resolution_subject.py  resolver.py  run.py  session.py  settings.py  source.py  toponym.py
geoparser/db/functions/: __init__.py  levenshtein.py  soundex.py
geoparser/db/models/: __init__.py  context.py  (+29 more)
geoparser/gazetteer/: __init__.py  config.py  gazetteer.py  installer.py  model.py
geoparser/gazetteers/: __init__.py  gazetteer.py  geonames.py  swissnames3d.py
geoparser/gazetteerv2/: __init__.py  config.py  gazetteer.py  installer.py
geoparser/geodoc/: __init__.py  geodoc.py
geoparser/geoparser/: __init__.py  geoparser.py
geoparser/geoparserv2/: __init__.py  geoparser_project.py  geoparserv2.py  module_interfaces.py  module_manager.py  module_orchestrator.py  module_runner.py  modules.py  orchestrator.py  project.py  project_manager.py
geoparser/geospan/: __init__.py  geospan.py
geoparser/modules/: __init__.py  interfaces.py  module.py  spacy_recognizer.py
geoparser/orchestrator/: __init__.py  orchestrator.py
geoparser/pipeline/: __init__.py  modules.py  orchestrator.py  pipeline.py
geoparser/project/: __init__.py  project.py
geoparser/services/: __init__.py  recognition.py  resolution.py
geoparser/templates/: annotate.html  continue_session.html  index.html  start_new_session.html  upload.html
geoparser/tests/: conftest.py  test_config.py  test_gazetteer.py  test_geodoc.py  test_geonames.py  test_geoparser.py  test_geospan.py  test_swissnames3d.py  test_trainer.py  utils.py
geoparser/trainer/: __init__.py  trainer.py
paper/: paper.bib  paper.md
tests/: conftest.py  pytest.ini  test_annotator.py  test_annotator_app.py  test_annotator_crud_document.py  test_annotator_crud_session.py  test_annotator_crud_settings.py  test_annotator_crud_toponym.py  test_annotator_db.py  test_annotator_dependencies.py  test_annotator_exceptions.py  test_annotator_validators.py  test_app.py  test_cli.py  test_config.py  test_crud_session.py  test_db.py  test_db_crud_document.py  test_db_crud_session.py  test_db_crud_settings.py  test_db_crud_toponym.py  test_db_validators.py  test_dependencies.py  test_gazetteer.py  test_geodoc.py  test_geonames.py  test_geoparser.py  test_geospan.py  test_sessions_cache.py  test_swissnames3d.py  test_trainer.py
tests/e2e/: test_complete_pipeline.py  test_parsing_pipeline.py  test_training_pipeline.py
tests/fixtures/: __init__.py  database.py  db.py  gazetteer.py  models.py  modules.py
tests/geoparser/: test_geoparser.py
tests/geoparserv2/: conftest.py  test_geoparser_project.py  test_geoparserv2.py  test_module_interfaces.py  test_module_runner.py  test_orchestrator.py  test_project.py  test_project_manager.py
tests/integration/: e2e.py  test_geoparser_integration.py  test_project_integration.py
tests/modules/: conftest.py  test_interfaces.py  test_module.py
tests/orchestrator/: conftest.py  test_orchestrator.py
tests/project/: conftest.py  test_project.py
tests/services/: conftest.py  test_recognition.py  test_resolution.py
tests/static/: annotations.json  annotator_doc0.txt  minimal.shp
tests/unit/: test_main.py
(+343 files in other folders)
