[tool.poetry]
name = "geoparser"
version = "0.2.0"
description = "A customizable geoparsing library for unstructured text"
authors = ["Diego Gomes <diego.gomes@uzh.ch>"]
readme = "README.md"
license = "MIT"
homepage = "https://geoparser.app"
repository = "https://github.com/dguzh/geoparser"
include = [
    "LICENSE",
    "THIRD_PARTY_LICENSES",
    "README.md",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^2.0.0"
pandas = "^2.2.3"
spacy = "^3.8.2"
sentence-transformers = "^3.3.0"
tqdm = "^4.67.0"
torch = "^2.5.1"
requests = "^2.32.3"
appdirs = "^1.4.4"
datasets = "^3.1.0"
haversine = "^2.8.1"
accelerate = "^0.34.2"
pydantic = "^2.9.2"
geopandas = "^1.0.1"
flask = "^3.1.0"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
pytest = "^8.2.2"
jupyter = "^1.0.0"
requests-mock = "^1.12.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}
sphinx = "7.4.7"
sphinx-rtd-theme = "^3.0.1"
sphinx-tabs = "^3.4.7"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=geoparser --cov-report html"

[tool.coverage.report]
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    ]

[tool.coverage.run]
omit = ["tests/*"]
relative_files = true
