[tool.poetry]
name = "geoparser"
version = "0.2.3"
description = "A customizable geoparsing library for unstructured text"
authors = ["Diego Gomes <diego.gomes@uzh.ch>"]
readme = "README.md"
license = "MIT"
homepage = "https://geoparser.app"
repository = "https://github.com/dguzh/geoparser"
include = [
    "LICENSE",
    "THIRD_PARTY_LICENSES",
    "README.md",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.1.0"
pandas = "^2.2.3"
spacy = "^3.8.7"
sentence-transformers = "^3.4.1"
tqdm = "^4.67.0"
torch = "^2.8.0"
requests = "^2.32.3"
appdirs = "^1.4.4"
datasets = "^3.1.0"
haversine = "^2.8.1"
accelerate = "^1.0.0"
pydantic = "^2.9.2"
geopandas = "^1.0.1"
typer = "^0.15.2"
fastapi = "^0.115.6"
werkzeug = "^3.1.3"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
sqlmodel = "^0.0.22"
srsly = ">=2.5.0"
thinc = ">=8.3.6"
scipy = ">=1.15.0"
pyproj = ">=3.7.0"


[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "5.13.2"
pytest = "^8.2.2"
jupyter = "^1.0.0"
requests-mock = "^1.12.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}
sphinx = "7.4.7"
sphinx-rtd-theme = "^3.0.1"
sphinx-tabs = "^3.4.7"
pytest-cov = "^6.0.0"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=geoparser --cov-report html"

[tool.coverage.report]
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if t.TYPE_CHECKING:",
    ]

[tool.coverage.run]
source = ["geoparser"]
omit = ["tests/*"]
relative_files = true

[tool.coverage.paths]
source = [
    'geoparser/',
    'geoparser\',
]
